@@ -6621,7 +6621,7 @@ The cached MPD is assigned the following headers:
 .br
 * `x-route-ll`: boolean value, if yes indicates that the indicated first segment is currently being received (low latency signaling).
 .br
-* `x-route-loop`: boolean value, if yes indicates a loop in the service has been detected (usually pcap replay loop).
+* `x-route-loop`: boolean value, if yes indicates a loop (e.g. pcap replay) in the service has been detected - only checked if .I cloop is set.
 .br
   
 .br
@@ -6744,9 +6744,11 @@ max_segs (uint, default: 0):   maximum number of segments to keep on disk
 .br
 odir (str):                    output directory for standalone mode
 .br
-reorder (bool, default: false): ignore order flag in ROUTE/LCT packets, avoiding considering object done when TOI changes
+reorder (bool, default: true): consider packets are not always in order - if false, this will evaluate an LCT object as done when TOI changes
 .br
-rtimeout (uint, default: 5000): default timeout in ms to wait when gathering out-of-order packets
+cloop (bool, default: false):  check for loops based on TOI (used for capture replay)
+.br
+rtimeout (uint, default: 1000): default timeout in us to wait when gathering out-of-order packets
 .br
 fullseg (bool, default: false): only dispatch full segments in cache mode (always true for other modes)
 .br
@@ -6764,7 +6766,7 @@ repair (enum, default: simple): repair mode for corrupted files
 .br
 repair_url (cstr):             repair url
 .br
-max_sess (uint, default: 1):   max number of concurrent HTTP repair sassions
+max_sess (uint, default: 1):   max number of concurrent HTTP repair sessions
 .br
 
 .br
